# untis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: configuration.md  element_ids.md  exceptions.md  index.md  quick_start.md  sesion.md  timetable.md
examples/: credentials.py  html_timetable.py
script_examples/: html_timetable.py
untis/: __init__.py  config.py  config.pyi  exceptions.py  exceptions.pyi  logging.py  logging.pyi  objects.py  objects.pyi
